--- a/src/assets/scss/_tables.scss
+++ b/src/assets/scss/_tables.scss
@@ -6,15 +6,15 @@ table {
 }
 
 table tr {
-    border-top: 1px solid var(--component-border-color);
-    background-color: var(--component-bg);
+    border-top: 1px solid var(--surface-border-color);
+    background-color: var(--surface-bg);
     margin: 0;
     padding: 0;
 }
 
 table tr td,
 table tr th {
-    border: 1px solid var(--component-border-color);
+    border: 1px solid var(--surface-border-color);
     margin: 0;
     padding: 6px 13px;
 }
