--- a/src/components/css/button.css
+++ b/src/components/css/button.css
@@ -39,12 +39,12 @@
 /* neutral button */
 .fc-button.fc-button--link {
   background: transparent;
-  color: var(--component-color);
+  color: var(--surface-color);
 }
 
 .fc-button.fc-button--link:focus,
 .fc-button.fc-button--link:hover
 .fc-button.fc-button--link:active
 .fc-button.fc-button--link.active {
-  background: var(--fc-button-neutral-color-background-hover, var(--component-bg));
+  background: var(--fc-button-neutral-color-background-hover, var(--surface-bg));
 }
