--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -190,44 +190,44 @@ $breakpoints: (
 // Components
 // ----------
 
+// Surfaces
 
-
-$component-bg: $white;
-$component-color: $black;
-$component-border-color: $border-color;
-$component-border-radius: 2px;
-$component-shadow-elevation-1: 0 2px 1px -1px rgba($black,.2),0 1px 1px 0 rgba($black,.14),0 1px 3px 0 rgba($black,.12);
-$component-shadow-elevation-2: 0 3px 1px -2px rgba($black,.2),0 2px 2px 0 rgba($black,.14),0 1px 5px 0 rgba($black,.12);
-$component-shadow-elevation-3: 0 3px 3px -2px rgba($black,.2),0 3px 4px 0 rgba($black,.14),0 1px 8px 0 rgba($black,.12);
-$component-shadow-elevation-4: 0 2px 4px -1px rgba($black,.2),0 4px 5px 0 rgba($black,.14),0 1px 10px 0 rgba($black,.12);
-$component-shadow-elevation-5: 0 3px 5px -1px rgba($black,.2),0 6px 10px 0 rgba($black,.14),0 1px 18px 0 rgba($black,.12);
-$component-shadow-elevation-6: 0 5px 5px -3px rgba($black,.2),0 8px 10px 1px rgba($black,.14),0 3px 14px 2px rgba($black,.12);
-$component-shadow-elevation-7: 0 7px 8px -4px rgba($black,.2),0 12px 17px 2px rgba($black,.14),0 5px 22px 4px rgba($black,.12);
-$component-shadow-elevation-8: 0 8px 10px -5px rgba($black,.2),0 16px 24px 2px rgba($black,.14),0 6px 30px 5px rgba($black,.12);
-$component-shadow-elevation-9: 0 11px 15px -7px rgba($black,.2),0 24px 38px 3px rgba($black,.14),0 9px 46px 8px rgba($black,.12);
-$component-styles: (
-  'component-bg': $component-bg,
-  'component-bg-elevation-1': $component-bg,
-  'component-bg-elevation-2': $component-bg,
-  'component-bg-elevation-3': $component-bg,
-  'component-bg-elevation-4': $component-bg,
-  'component-bg-elevation-5': $component-bg,
-  'component-bg-elevation-6': $component-bg,
-  'component-bg-elevation-7': $component-bg,
-  'component-bg-elevation-8': $component-bg,
-  'component-bg-elevation-9': $component-bg,
-  'component-color': $component-color,
-  'component-border-color': $component-border-color,
-  'component-border-radius': $component-border-radius,
-  'component-shadow-elevation-1': $component-shadow-elevation-1,
-  'component-shadow-elevation-2': $component-shadow-elevation-2,
-  'component-shadow-elevation-3': $component-shadow-elevation-3,
-  'component-shadow-elevation-4': $component-shadow-elevation-4,
-  'component-shadow-elevation-5': $component-shadow-elevation-5,
-  'component-shadow-elevation-6': $component-shadow-elevation-6,
-  'component-shadow-elevation-7': $component-shadow-elevation-7,
-  'component-shadow-elevation-8': $component-shadow-elevation-8,
-  'component-shadow-elevation-9': $component-shadow-elevation-9
+$surface-bg: $white;
+$surface-color: $black;
+$surface-border-color: $border-color;
+$surface-border-radius: 2px;
+$surface-shadow-elevation-01: 0 2px 1px -1px rgba($black,.2),0 1px 1px 0 rgba($black,.14),0 1px 3px 0 rgba($black,.12);
+$surface-shadow-elevation-02: 0 3px 1px -2px rgba($black,.2),0 2px 2px 0 rgba($black,.14),0 1px 5px 0 rgba($black,.12);
+$surface-shadow-elevation-03: 0 3px 3px -2px rgba($black,.2),0 3px 4px 0 rgba($black,.14),0 1px 8px 0 rgba($black,.12);
+$surface-shadow-elevation-04: 0 2px 4px -1px rgba($black,.2),0 4px 5px 0 rgba($black,.14),0 1px 10px 0 rgba($black,.12);
+$surface-shadow-elevation-05: 0 3px 5px -1px rgba($black,.2),0 6px 10px 0 rgba($black,.14),0 1px 18px 0 rgba($black,.12);
+$surface-shadow-elevation-06: 0 5px 5px -3px rgba($black,.2),0 8px 10px 1px rgba($black,.14),0 3px 14px 2px rgba($black,.12);
+$surface-shadow-elevation-07: 0 7px 8px -4px rgba($black,.2),0 12px 17px 2px rgba($black,.14),0 5px 22px 4px rgba($black,.12);
+$surface-shadow-elevation-08: 0 8px 10px -5px rgba($black,.2),0 16px 24px 2px rgba($black,.14),0 6px 30px 5px rgba($black,.12);
+$surface-shadow-elevation-09: 0 11px 15px -7px rgba($black,.2),0 24px 38px 3px rgba($black,.14),0 9px 46px 8px rgba($black,.12);
+$surface-styles: (
+  'surface-bg': $surface-bg,
+  'surface-bg-elevation-01': $surface-bg,
+  'surface-bg-elevation-02': $surface-bg,
+  'surface-bg-elevation-03': $surface-bg,
+  'surface-bg-elevation-04': $surface-bg,
+  'surface-bg-elevation-05': $surface-bg,
+  'surface-bg-elevation-06': $surface-bg,
+  'surface-bg-elevation-07': $surface-bg,
+  'surface-bg-elevation-08': $surface-bg,
+  'surface-bg-elevation-09': $surface-bg,
+  'surface-color': $surface-color,
+  'surface-border-color': $surface-border-color,
+  'surface-border-radius': $surface-border-radius,
+  'surface-shadow-elevation-01': $surface-shadow-elevation-01,
+  'surface-shadow-elevation-02': $surface-shadow-elevation-02,
+  'surface-shadow-elevation-03': $surface-shadow-elevation-03,
+  'surface-shadow-elevation-04': $surface-shadow-elevation-04,
+  'surface-shadow-elevation-05': $surface-shadow-elevation-05,
+  'surface-shadow-elevation-06': $surface-shadow-elevation-06,
+  'surface-shadow-elevation-07': $surface-shadow-elevation-07,
+  'surface-shadow-elevation-08': $surface-shadow-elevation-08,
+  'surface-shadow-elevation-09': $surface-shadow-elevation-09
 ) !default;
 
 // Dark theme
@@ -260,40 +260,40 @@ $dm-colors: (
 
 
 // components
-$dm-component-bg: $gray-100;
-$dm-component-color: $white;
-$dm-component-border-color: $dm-border-color;
-$dm-component-border-radius: 2px;
-$dm-component-shadow-elevation-1: 0 2px 1px -1px rgba($black,.2),0 1px 1px 0 rgba($black,.14),0 1px 3px 0 rgba($black,.12);
-$dm-component-shadow-elevation-2: 0 3px 1px -2px rgba($black,.2),0 2px 2px 0 rgba($black,.14),0 1px 5px 0 rgba($black,.12);
-$dm-component-shadow-elevation-3: 0 3px 3px -2px rgba($black,.2),0 3px 4px 0 rgba($black,.14),0 1px 8px 0 rgba($black,.12);
-$dm-component-shadow-elevation-4: 0 2px 4px -1px rgba($black,.2),0 4px 5px 0 rgba($black,.14),0 1px 10px 0 rgba($black,.12);
-$dm-component-shadow-elevation-5: 0 3px 5px -1px rgba($black,.2),0 6px 10px 0 rgba($black,.14),0 1px 18px 0 rgba($black,.12);
-$dm-component-shadow-elevation-6: 0 5px 5px -3px rgba($black,.2),0 8px 10px 1px rgba($black,.14),0 3px 14px 2px rgba($black,.12);
-$dm-component-shadow-elevation-7: 0 7px 8px -4px rgba($black,.2),0 12px 17px 2px rgba($black,.14),0 5px 22px 4px rgba($black,.12);
-$dm-component-shadow-elevation-8: 0 8px 10px -5px rgba($black,.2),0 16px 24px 2px rgba($black,.14),0 6px 30px 5px rgba($black,.12);
-$dm-component-shadow-elevation-9: 0 11px 15px -7px rgba($black,.2),0 24px 38px 3px rgba($black,.14),0 9px 46px 8px rgba($black,.12);
-$dm-component-styles: (
-  'component-bg': $dm-component-bg,
-  'component-bg-elevation-1': #1d1d1d,
-  'component-bg-elevation-2': #222222,
-  'component-bg-elevation-3': #242424,
-  'component-bg-elevation-4': #272727,
-  'component-bg-elevation-5': #2c2c2c,
-  'component-bg-elevation-6': #2d2d2d,
-  'component-bg-elevation-7': #323232,
-  'component-bg-elevation-8': #343434,
-  'component-bg-elevation-9': #373737,
-  'component-color': $dm-component-color,
-  'component-border-color': $dm-border-color,
-  'component-border-radius': $dm-component-border-radius,
-  'component-shadow-elevation-1': $dm-component-shadow-elevation-1,
-  'component-shadow-elevation-2': $dm-component-shadow-elevation-2,
-  'component-shadow-elevation-3': $dm-component-shadow-elevation-3,
-  'component-shadow-elevation-4': $dm-component-shadow-elevation-4,
-  'component-shadow-elevation-5': $dm-component-shadow-elevation-5,
-  'component-shadow-elevation-6': $dm-component-shadow-elevation-6,
-  'component-shadow-elevation-7': $dm-component-shadow-elevation-7,
-  'component-shadow-elevation-8': $dm-component-shadow-elevation-8,
-  'component-shadow-elevation-9': $dm-component-shadow-elevation-9
+$dm-surface-bg: $gray-100;
+$dm-surface-color: $white;
+$dm-surface-border-color: $dm-border-color;
+$dm-surface-border-radius: 2px;
+$dm-surface-shadow-elevation-01: 0 2px 1px -1px rgba($black,.2),0 1px 1px 0 rgba($black,.14),0 1px 3px 0 rgba($black,.12);
+$dm-surface-shadow-elevation-02: 0 3px 1px -2px rgba($black,.2),0 2px 2px 0 rgba($black,.14),0 1px 5px 0 rgba($black,.12);
+$dm-surface-shadow-elevation-03: 0 3px 3px -2px rgba($black,.2),0 3px 4px 0 rgba($black,.14),0 1px 8px 0 rgba($black,.12);
+$dm-surface-shadow-elevation-04: 0 2px 4px -1px rgba($black,.2),0 4px 5px 0 rgba($black,.14),0 1px 10px 0 rgba($black,.12);
+$dm-surface-shadow-elevation-05: 0 3px 5px -1px rgba($black,.2),0 6px 10px 0 rgba($black,.14),0 1px 18px 0 rgba($black,.12);
+$dm-surface-shadow-elevation-06: 0 5px 5px -3px rgba($black,.2),0 8px 10px 1px rgba($black,.14),0 3px 14px 2px rgba($black,.12);
+$dm-surface-shadow-elevation-07: 0 7px 8px -4px rgba($black,.2),0 12px 17px 2px rgba($black,.14),0 5px 22px 4px rgba($black,.12);
+$dm-surface-shadow-elevation-08: 0 8px 10px -5px rgba($black,.2),0 16px 24px 2px rgba($black,.14),0 6px 30px 5px rgba($black,.12);
+$dm-surface-shadow-elevation-09: 0 11px 15px -7px rgba($black,.2),0 24px 38px 3px rgba($black,.14),0 9px 46px 8px rgba($black,.12);
+$dm-surface-styles: (
+  'surface-bg': $dm-surface-bg,
+  'surface-bg-elevation-01': #1d1d1d,
+  'surface-bg-elevation-02': #222222,
+  'surface-bg-elevation-03': #242424,
+  'surface-bg-elevation-04': #272727,
+  'surface-bg-elevation-05': #2c2c2c,
+  'surface-bg-elevation-06': #2d2d2d,
+  'surface-bg-elevation-07': #323232,
+  'surface-bg-elevation-08': #343434,
+  'surface-bg-elevation-09': #373737,
+  'surface-color': $dm-surface-color,
+  'surface-border-color': $dm-border-color,
+  'surface-border-radius': $dm-surface-border-radius,
+  'surface-shadow-elevation-01': $dm-surface-shadow-elevation-01,
+  'surface-shadow-elevation-02': $dm-surface-shadow-elevation-02,
+  'surface-shadow-elevation-03': $dm-surface-shadow-elevation-03,
+  'surface-shadow-elevation-04': $dm-surface-shadow-elevation-04,
+  'surface-shadow-elevation-05': $dm-surface-shadow-elevation-05,
+  'surface-shadow-elevation-06': $dm-surface-shadow-elevation-06,
+  'surface-shadow-elevation-07': $dm-surface-shadow-elevation-07,
+  'surface-shadow-elevation-08': $dm-surface-shadow-elevation-08,
+  'surface-shadow-elevation-09': $dm-surface-shadow-elevation-09
 ) !default;
