--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -224,5 +224,5 @@ $utilities: (
 // temp
 
 // .fu-component-bg {
-//   background: var(----component-bg);
+//   background: var(----surface-bg);
 // }
