--- a/src/components/css/card.css
+++ b/src/components/css/card.css
@@ -1,7 +1,7 @@
 .fc-card {
-  background: var(--fc-card-color-bg, var(--surface-bg-elevation-01));
-  border: 1px solid var(--fc-card-color-border, var(--surface-border-color));
-  border-radius: var(--fc-card-border-radius, var(--surface-border-radius));
+  background: var(--fc-card-color-bg, var(--ui-elevation-background-01));
+  border: 1px solid var(--fc-card-color-border, var(--ui-border-color));
+  border-radius: var(--fc-card-border-radius, var(--ui-border-radius));
 }
 
 .fc-card__header {
