--- a/src/components/css/dropdown.css
+++ b/src/components/css/dropdown.css
@@ -36,11 +36,11 @@
   margin: var(--fc-dropdown-menu-spacing-margin, calc(var(--spacing-03) / 2) 0 0);
   text-align: left;
   list-style: none;
-  background-color: var(--fc-dropdown-menu-color-background, var(--surface-bg-elevation-03));
+  background-color: var(--fc-dropdown-menu-color-background, var(--ui-elevation-background-03));
   background-clip: padding-box;
-  border: 1px solid var(--fc-dropdown-menu-color-border, var(--surface-border-color));
+  border: 1px solid var(--fc-dropdown-menu-color-border, var(--ui-border-color));
   border-radius: .25rem; /* CHANGE */
-  box-shadow: var(--fc-dropdown-menu-shadow, var(--surface-shadow-elevation-03));
+  box-shadow: var(--fc-dropdown-menu-shadow, var(--ui-elevation-shadow-03));
 }
 
 
