feat: add additional ui colours

--- a/src/assets/scss/_tables.scss
+++ b/src/assets/scss/_tables.scss
@@ -7,7 +7,7 @@ table {
 
 table tr {
     border-top: 1px solid var(--ui-border-color);
-    background-color: var(--ui-background);
+    background-color: var(--ui-background-01);
     margin: 0;
     padding: 0;
 }
