--- a/src/components/css/button.css
+++ b/src/components/css/button.css
@@ -46,5 +46,5 @@
 .fc-button.fc-button--link:hover
 .fc-button.fc-button--link:active
 .fc-button.fc-button--link.active {
-  background: var(--fc-button-neutral-color-background-hover, var(--ui-background));
+  background: var(--fc-button-neutral-color-background-hover, var(--ui-background-01));
 }
