--- a/src/assets/scss/_prism.scss
+++ b/src/assets/scss/_prism.scss
@@ -36,7 +36,7 @@
  
  :not(pre) > code[class*="language-"],
  pre[class*="language-"] {
-   background: #1d1f21;
+   background: var(--gray-90-color);
  }
  
  /* Inline code */
