--- a/src/assets/scss/_sidebar.scss
+++ b/src/assets/scss/_sidebar.scss
@@ -10,6 +10,7 @@
   height: calc(100vh - 76px);
   max-height: calc(100vh - 76px);
   overflow-y: auto;
+  background: var(--body-bg-color);
   border-right: 1px solid var(--border-color);
 
   --fc-nav-anchor-color-link: var(--high-emphasis-text-color)
