--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -10,6 +10,7 @@
   justify-content: space-between;
   height: var(--header-height);
   padding: 0 var(--header-padding);
+  background: var(--ui-elevation-background-02);
   border-bottom: 1px solid var(--border-color);
 }
 
