--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FicusJS components</title>
+    <base href="/">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
@@ -28,7 +29,6 @@
     <!-- component css END -->
   </head>
   <body style="overflow: hidden;">
-
     <div class="fd-main-layout">
       <header class="fc-navbar">
         <section class="fc-navbar__section">
@@ -82,8 +82,6 @@
         </nav>
       </div>
     </div>
-
-    <script type="module" src="../assets/js/theme.js"></script>
+    <script type="module" src="assets/js/theme.js"></script>
   </body>
-
 </html>
