--- a/src/components/css/form-input.css
+++ b/src/components/css/form-input.css
@@ -1,40 +1,45 @@
-.fc-form-input {
+.fc-form {
   display: block;
   margin-bottom: var(--spacing-05)
 }
-.fc-form-input__input {
+.fc-form__input {
   display: flex;
   flex-direction: column;
 }
-.fc-form-input__input.fc-form-input__input--reverse {
+.fc-form__input.fc-form__input--reverse {
   flex-direction: row-reverse;
   justify-content: start;
 }
-.fc-form-input__label {
+.fc-form__label {
   margin-bottom: var(--spacing-02);
   font-weight: 600;
 }
-.fc-form-input__control {
+.fc-form__control {
   display: block;
   appearance: none;
   background: var(--ui-elevation-background-03);
   background-image: none;
-  border: 1px solid var(--ui-border-color);
+  border: 1px solid var(--ui-border-05);
   padding: var(--spacing-03);
   outline: none;
 }
-.fc-form-input__control:focus {
+.fc-form__control:focus {
   border-color: var(--primary-dark-color);
   box-shadow: 0 0 0 .1rem rgba(var(--primary-dark-color), .2);
 }
-.fc-form-input__control::placeholder {
+.fc-form__control::placeholder {
   color: var(--medium-emphasis-text-color)
+}
+.fc-form__help-text {
+  margin-top: var(--spacing-01);
+  font-size: var(--text-xs);
+  font-weight: 400;
 }
 
 
 
 
-.fc-form-input__submit {
+.fc-form__submit {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -46,7 +51,7 @@
   width: auto;
   transition: background-color .15s ease-in-out, border-color .15s ease-in-out
 }
-.fc-form-input__submit:hover {
+.fc-form__submit:hover {
   background-color: #16336a;
   border-color: #142e60;
 }
@@ -54,11 +59,11 @@ fc-input[type="submit"] fc-label,
 fc-input[type="submit"] fc-help-text {
   display: none;
 }
-fc-input[type="submit"] .fc-form-input__group {
+fc-input[type="submit"] .fc-form__group {
   margin: 0;
 }
 @supports (-webkit-appearance: none) or (-moz-appearance: none) {
-  .fc-form-input__check {
+  .fc-form__check {
     --active: #275efe;
     --active-inner: #fff;
     --focus: 2px rgba(39, 94, 254, .3);
@@ -80,7 +85,7 @@ fc-input[type="submit"] .fc-form-input__group {
     background: var(--b, var(--background));
     transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
   }
-  .fc-form-input__check:after {
+  .fc-form__check:after {
     content: '';
     display: block;
     left: 0;
@@ -88,41 +93,41 @@ fc-input[type="submit"] .fc-form-input__group {
     position: absolute;
     transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
   }
-  .fc-form-input__check:checked {
+  .fc-form__check:checked {
     --b: var(--active);
     --bc: var(--active);
     --d-o: 0.3s;
     --d-t: 0.6s;
     --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
   }
-  .fc-form-input__check:disabled {
+  .fc-form__check:disabled {
     --b: var(--disabled);
     cursor: not-allowed;
     opacity: 0.9;
   }
-  .fc-form-input__check:disabled:checked {
+  .fc-form__check:disabled:checked {
     --b: var(--disabled-inner);
     --bc: var(--border);
   }
-  .fc-form-input__check:disabled + label {
+  .fc-form__check:disabled + label {
     cursor: not-allowed;
   }
-  .fc-form-input__check:hover:not(:checked):not(:disabled) {
+  .fc-form__check:hover:not(:checked):not(:disabled) {
     --bc: var(--border-hover);
   }
-  .fc-form-input__check:focus {
+  .fc-form__check:focus {
     box-shadow: 0 0 0 var(--focus);
   }
-  .fc-form-input__check:not(.fc-form-input__switch) {
+  .fc-form__check:not(.fc-form__switch) {
     width: 21px;
   }
-  .fc-form-input__check:not(.fc-form-input__switch):after {
+  .fc-form__check:not(.fc-form__switch):after {
     opacity: var(--o, 0);
   }
-  .fc-form-input__check:not(.fc-form-input__switch):checked {
+  .fc-form__check:not(.fc-form__switch):checked {
     --o: 1;
   }
-  .fc-form-input__check + label {
+  .fc-form__check + label {
     font-size: 14px;
     line-height: 21px;
     display: inline-block;
@@ -130,10 +135,10 @@ fc-input[type="submit"] .fc-form-input__group {
     cursor: pointer;
     margin-left: 4px;
   }
-  input[type='checkbox'].fc-form-input__check:not(.fc-form-input__switch) {
+  input[type='checkbox'].fc-form__check:not(.fc-form__switch) {
     border-radius: 7px;
   }
-  input[type='checkbox'].fc-form-input__check:not(.fc-form-input__switch):after {
+  input[type='checkbox'].fc-form__check:not(.fc-form__switch):after {
     width: 5px;
     height: 9px;
     border: 2px solid var(--active-inner);
@@ -143,14 +148,14 @@ fc-input[type="submit"] .fc-form-input__group {
     top: 4px;
     transform: rotate(var(--r, 20deg));
   }
-  input[type='checkbox'].fc-form-input__check:not(.fc-form-input__switch):checked {
+  input[type='checkbox'].fc-form__check:not(.fc-form__switch):checked {
     --r: 43deg;
   }
-  input[type='checkbox'].fc-form-input__switch {
+  input[type='checkbox'].fc-form__switch {
     width: 38px;
     border-radius: 11px;
   }
-  input[type='checkbox'].fc-form-input__switch:after {
+  input[type='checkbox'].fc-form__switch:after {
     left: 2px;
     top: 2px;
     border-radius: 50%;
@@ -159,17 +164,17 @@ fc-input[type="submit"] .fc-form-input__group {
     background: var(--ab, var(--border));
     transform: translateX(var(--x, 0));
   }
-  input[type='checkbox'].fc-form-input__switch:checked {
+  input[type='checkbox'].fc-form__switch:checked {
     --ab: var(--active-inner);
     --x: 17px;
   }
-  input[type='checkbox'].fc-form-input__switch:disabled:not(:checked):after {
+  input[type='checkbox'].fc-form__switch:disabled:not(:checked):after {
     opacity: 0.6;
   }
-  input[type='radio'].fc-form-input__check {
+  input[type='radio'].fc-form__check {
     border-radius: 50%;
   }
-  input[type='radio'].fc-form-input__check:after {
+  input[type='radio'].fc-form__check:after {
     width: 19px;
     height: 19px;
     border-radius: 50%;
@@ -177,7 +182,7 @@ fc-input[type="submit"] .fc-form-input__group {
     opacity: 0;
     transform: scale(var(--s, 0.7));
   }
-  input[type='radio'].fc-form-input__check:checked {
+  input[type='radio'].fc-form__check:checked {
     --s: 0.5;
   }
 }
