--- a/src/components/css/form-select.css
+++ b/src/components/css/form-select.css
@@ -1,13 +1,15 @@
+.fc-form {
+  display: block;
+  margin-bottom: var(--spacing-05)
+}
 .fc-form__select select {
   display: block;
   width: 100%;
-  padding: var(--form-input-padding);
-  border: var(--form-input-border);
-  border-radius: var(--form-input-border-radius);
-  transition: var(--form-input-transition);
+  border: 1px solid var(--ui-border-05);
+  padding: var(--spacing-03);
   max-width: 100%;
   padding-right: 2.25rem;
-  background-color: #fff;
+  background-color: var(--ui-elevation-background-03);
   background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAUCAMAAACzvE1FAAAADFBMVEUzMzMzMzMzMzMzMzMKAG/3AAAAA3RSTlMAf4C/aSLHAAAAPElEQVR42q3NMQ4AIAgEQTn//2cLdRKppSGzBYwzVXvznNWs8C58CiussPJj8h6NwgorrKRdTvuV9v16Afn0AYFOB7aYAAAAAElFTkSuQmCC");
   background-repeat: no-repeat;
   background-position-x: calc(100% - 1rem);
@@ -17,25 +19,38 @@
   -moz-appearance: none;
   appearance: none;
 }
-.fc-form__select select::-ms-expand {
+.fc-form select::-ms-expand {
   opacity: 0;
 }
-.fc-form__select select[multiple] {
+.fc-form select[multiple] {
   height: auto;
 }
-
-.fc-form__select select:focus {
-  border-color: var(--form-input-focus-border-color);
-  border-width: var(--form-input-focus-border-width);
-  padding: var(--form-input-focus-padding);
-  box-shadow: var(--form-input-box-shadow-offsets) var(--focus-input-box-shadow-color, var(--form-primary-shadow-color));
+.fc-form select:focus {
+  border-color: var(--primary-dark-color);
+  box-shadow: 0 0 0 .1rem rgba(var(--primary-dark-color), .2);
 }
-.fc-form__select select.ms-is-touched:invalid {
+/* .fc-form select.ms-is-touched:invalid {
   border-color: var(--form-invalid-color-rgb);
   background-color: var(--form-invalid-bg-color);
   border-width: var(--form-input-focus-border-width);
   padding: var(--form-input-focus-padding);
 }
-.fc-form__select select.ms-is-touched:invalid:focus {
+.fc-form select.ms-is-touched:invalid:focus {
   --focus-input-box-shadow-color: var(--form-invalid-shadow-color);
+} */
+
+.fc-form__label {
+  margin-bottom: var(--spacing-02);
+  font-weight: 600;
+}
+
+.fc-form__help-text {
+  margin-top: var(--spacing-01);
+  font-size: var(--text-xs);
+  font-weight: 400;
+}
+
+.fc-form__select {
+  display: flex;
+  flex-direction: column;
 }
